[gd_scene load_steps=15 format=3 uid="uid://csa6smd3at7tf"]

[ext_resource type="FontFile" uid="uid://dpfp0r4gq6h4d" path="res://assets/ui/mainport.ttf" id="1_36ylp"]
[ext_resource type="Texture2D" uid="uid://r3se4stfbo4m" path="res://assets/background/background.png" id="1_htada"]
[ext_resource type="Script" path="res://src/main_menu.gd" id="1_x3e1o"]
[ext_resource type="Texture2D" uid="uid://bw80od2udayp4" path="res://assets/ui/gear.png" id="3_evviu"]
[ext_resource type="Texture2D" uid="uid://c3snw6owwn3cl" path="res://assets/ui/enter_fullscreen.png" id="4_2tbbo"]
[ext_resource type="Theme" uid="uid://37elalvtqa6s" path="res://src/buttons.tres" id="6_pok7u"]
[ext_resource type="AudioStream" uid="uid://cw2nmprael7ae" path="res://assets/sound/game_music.mp3" id="9_7sy6c"]
[ext_resource type="AudioStream" uid="uid://bmtahw41a2p2t" path="res://assets/sound/forward.mp3" id="10_5d4sf"]
[ext_resource type="AudioStream" uid="uid://1oflo2uupgv" path="res://assets/sound/back.mp3" id="11_hxttk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ybh8n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dven5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_klsmf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7fvd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2qf0"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_x3e1o")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(162, 113)
scale = Vector2(1.05093, 1.05093)
texture = ExtResource("1_htada")

[node name="Settings" type="TextureButton" parent="."]
offset_left = 7.0
offset_top = 192.0
offset_right = 39.0
offset_bottom = 224.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("3_evviu")

[node name="Fullscreen" type="Button" parent="."]
offset_left = 376.0
offset_top = 7.0
offset_right = 424.0
offset_bottom = 55.0
scale = Vector2(0.3, 0.3)
theme_override_styles/normal = SubResource("StyleBoxEmpty_ybh8n")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dven5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_klsmf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_q7fvd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2qf0")
toggle_mode = true
icon = ExtResource("4_2tbbo")

[node name="Logo" type="Label" parent="."]
offset_left = 146.0
offset_top = 9.0
offset_right = 255.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_36ylp")
theme_override_font_sizes/font_size = 20
text = "waves  
   of 
     waste"

[node name="Play" type="Button" parent="."]
offset_left = 132.0
offset_top = 79.0
offset_right = 322.0
offset_bottom = 128.0
scale = Vector2(0.7, 0.7)
theme = ExtResource("6_pok7u")
text = "Play game"

[node name="TrashMenu" type="Button" parent="."]
offset_left = 132.0
offset_top = 115.0
offset_right = 322.0
offset_bottom = 164.0
scale = Vector2(0.7, 0.5)
theme = ExtResource("6_pok7u")
text = "View Trash"

[node name="HelpMenu" type="Button" parent="."]
offset_left = 132.0
offset_top = 142.0
offset_right = 322.0
offset_bottom = 191.0
scale = Vector2(0.7, 0.5)
theme = ExtResource("6_pok7u")
text = "Help"

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_7sy6c")
autoplay = true

[node name="ForwardSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5d4sf")
volume_db = 10.0

[node name="BackSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_hxttk")
volume_db = 3.0

[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TrashMenu" to="." method="_on_trashmenu_pressed"]
[connection signal="pressed" from="HelpMenu" to="." method="_on_helpmenu_pressed"]
